--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v4
       env:
-        archiveName: qt-win-${{ env.qt_ver }}
+        archiveName: qt-linux-${{ env.qt_ver }}
       with:
         name: qt-linux-static
         path: ${{env.archiveName}}.tar.bz2
@@ -151,7 +151,7 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v4
       env:
-        archiveName: qt-win-${{ env.qt_ver }}
+        archiveName: qt-macos-arm64-${{ env.qt_ver }}
       with:
         name: qt-macos-arm64-static
         path: ${{env.archiveName}}.tar.bz2
